@@ -3,6 +3,7 @@
 
 #include <QtGui/QTextCursor>
 #include <QtGui/QTextEdit>
+#include <QtGui/QSpinBox>
 
 #include "MorseMode.h"
 
@@ -20,6 +21,11 @@ public:
     virtual QString helpText();
     virtual QString icon();
 
+    virtual void loadSettings(QSettings &settings);
+    virtual void saveSettings(QSettings &settings);
+    virtual QBoxLayout * getPrefsLayout();
+    virtual void acceptPrefs();
+
 public slots:
     virtual void switchToMode();
     virtual void play();
@@ -32,7 +38,9 @@ private:
     QTextCursor                     m_readSpot;
     QTextEdit                      *m_textEdit;
     QString                         m_currentText;
-
+    int                             m_readWordCount;
+    int                             m_currentWordCount;
+    QSpinBox                       *m_readWordCountBox;
 };
 
 #endif // READMODE_H
